--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-h1 {
-  color: blue;
+body {
+  padding: 10px;
+}
+
+.first-section {
+  width: 90%;
+}
+.first-section-img {
+  height: 100%;
+  width: 100%;
 }
