--- a/style.css
+++ b/style.css
@@ -24,15 +24,30 @@ body {
 .first-section-text-2 {
   position: absolute;
   color: white;
+  z-index: 2;
 }
 
 .first-section-text-1 {
   top: 20%;
-  font-size: 30px;
+  font-size: 27px;
 }
 
 .first-section-text-2 {
   top: 30%;
   font-size: 50px;
   text-align: center;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Adjust the alpha value to change the darkness of the overlay */
+  z-index: 1; /* Ensure the overlay appears above the image */
 }
