--- a/style.css
+++ b/style.css
@@ -43,11 +43,17 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Adjust the alpha value to change the darkness of the overlay */
-  z-index: 1; /* Ensure the overlay appears above the image */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.second-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.second-section img {
+  width: 60%;
 }
