--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ body {
   width: 95%;
 }
 
+.grid-images:hover {
+  border-radius: 20px;
+  box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
 .eighth-section {
   background-color: #fde0e0;
   padding: 40px;
